// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/shared/ChartList.vue renders chart list if loaded charts 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            2014
          </td>
          <td data-label="Name" class=""><a>
              EGOISM 440
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A
          </td>
          <td data-label="Name" class=""><a>
              ENDYMION
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            A
          </td>
          <td data-label="Name" class=""><a>
              MAX 360
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            2014
          </td>
          <td data-label="Name" class=""><a>
              Over The “Period”
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            X3 VS 2ndMIX
          </td>
          <td data-label="Name" class=""><a>
              PARANOiA Revolution
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Series" class="">
            X2
          </td>
          <td data-label="Name" class=""><a>
              Valkyrie dimension
            </a></td>
          <td data-label="Difficulty" class="">
            <div class="tags has-addons"><span class="tag is-dark is-medium"><span class="">
          SINGLE
        </span>
              <!----></span> <span class="tag is-challenge is-medium"><span class="">
          CHALLENGE
        </span>
              <!----></span></div>
          </td>
          <td data-label="Lv" class="has-text-right">
            19
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/shared/ChartList.vue renders loading spin if { loading: true } 1`] = `
<div class="b-table is-loading">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr class="is-empty">
          <td colspan="0">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>Nothing here.</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
